--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -135,6 +135,11 @@
             <artifactId>org.openhab.binding.vitotronic</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.openhab.binding</groupId>
+            <artifactId>org.openhab.binding.deconz</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.openhab.addons.io</groupId>
